<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<EditText 
		android:id="@+id/world_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/world_name" 
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"/>
	<EditText 
		android:id="@+id/world_width"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/world_height" 
		android:layout_toRightOf="@id/world_name"/>
	<EditText 
		android:id="@+id/world_height"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/world_width" 
		android:layout_toRightOf="@id/world_width"/>
	<TextView
		android:id="@+id/debug_warning"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:hint="@string/debug_warning" 
		android:layout_below="@id/world_name"
		android:layout_gravity="center_vertical"/>
	<Button 
		android:id="@+id/generate_send"
		android:background="@color/green"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/generate_world"
		android:onClick="generateWorld"
		android:layout_toRightOf="@id/world_height"
		android:layout_above="@id/debug_warning"/>
</RelativeLayout>